[package]
name = "arch-atlas"
version.workspace = true
edition = "2021"
description = "Atlas Core: a modular, high-throughput indexing pipeline for decoding and processing accounts, instructions, transactions, and block-level events."
license = "MIT"
repository = "https://github.com/Arch-Network/atlas"

[features]
default = ["macros"]
macros = ["arch-atlas-macros", "arch-atlas-proc-macros"]

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
thiserror = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
borsh = { workspace = true }

arch_sdk = { workspace = true }
arch_program = { workspace = true }

titan-client = { workspace = true }

arch-atlas-proc-macros = { workspace = true, optional = true }
arch-atlas-macros = { workspace = true, optional = true }
