[package]
name = "arch-atlas-rollback-datasource"
version.workspace = true
edition = "2021"
repository = "https://github.com/Arch-Network/atlas"
license = "MIT"
description = "Atlas datasource emitting rollback and reapply events for index refresh."

[dependencies]
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
thiserror = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
hex = { workspace = true }

arch_sdk = { workspace = true }
arch_program = { workspace = true }

arch-atlas = { workspace = true }

titan-client = { workspace = true }
